<resources>
    <string name="creation_gif_title">Create GIF</string>
    <string name="creation_gif_back">Back</string>
    <string name="creation_gif_preview">Animation preview</string>
    <string name="creation_gif_position">Frame %1$d of %2$d</string>
    <string name="creation_gif_play">Play</string>
    <string name="creation_gif_pause">Pause</string>
    <string name="creation_gif_previous">Previous</string>
    <string name="creation_gif_next">Next</string>
    <string name="creation_gif_earlier">Move earlier</string>
    <string name="creation_gif_later">Move later</string>
    <string name="creation_gif_remove">Remove frame</string>
    <string name="creation_gif_duration">Time per frame</string>
...
