...
                contentAlignment = Alignment.Center,
            ) {
                ui.preview?.takeIf { !it.isRecycled }?.let {
                    Image(
                        it.asImageBitmap(),
                        stringResource(R.string.creation_gif_preview),
                        Modifier.fillMaxSize().padding(8.dp).testTag("creation-gif-preview"),
                        contentScale = ContentScale.Fit,
                    )
                }
            }
        },
        mediaSupport = { supportModifier, _ -> GifFrameToolbar(ui, actions, supportModifier) },
...
